--- a/study-of-webgl/works/137-5.html
+++ b/study-of-webgl/works/137-5.html
@@ -101,8 +101,10 @@
       </div><!-- end header -->
     </div><!-- end body-container -->
     <script defer src="../scripts/three.min.js"></script>
+    <script defer src="../scripts/loading.js"></script>
     <script defer src="../scripts/fullscreen.js"></script>
     <script defer src="../scripts/popup.js"></script>
     <script defer src="../scripts/137-5.js"></script>
+    <script>console.log('Hi, I\'m Toshiya Marukubo. Nice to meet you.')</script>
   </body>
 </html>
