--- a/study-of-webgl/works/castle.html
+++ b/study-of-webgl/works/castle.html
@@ -105,9 +105,11 @@
       </div><!-- end header -->
     </div><!-- end body-container -->
     <script defer src="../scripts/three.min.js"></script>
+    <script defer src="../scripts/loading.js"></script>
     <script defer src="../scripts/fullscreen.js"></script>
     <script defer src="../scripts/popup.js"></script>
     <script defer src="../scripts/castle.js"></script>
+    <script>console.log('Hi, I\'m Toshiya Marukubo. Nice to meet you.')</script>
   </body>
 </html>
 
