--- a/study-of-webgl/works/liquid.html
+++ b/study-of-webgl/works/liquid.html
@@ -85,9 +85,9 @@
           </div><!-- end what -->
           <div class="nav">
             <ul>
-              <li class="prev"><a href="./breathing.html"><span aria-label="Previous Page"><</span></a></li>
+              <li class="prev"><a href="./cube.html"><span aria-label="Previous Page"><</span></a></li>
               <li class="cur">#000</li>
-              <li class="next"><a href="./rotation.html"><span aria-label="Next Page">></span></a></li>
+              <li class="next"><a href="./monument.html"><span aria-label="Next Page">></span></a></li>
             </ul>
           </div><!-- end nav -->
           <div class="back">
@@ -105,8 +105,10 @@
       </div><!-- end header -->
     </div><!-- end body-container -->
     <script defer src="../scripts/three.min.js"></script>
+    <script defer src="../scripts/loading.js"></script>
     <script defer src="../scripts/fullscreen.js"></script>
     <script defer src="../scripts/popup.js"></script>
     <script defer src="../scripts/liquid.js"></script>
+    <script>console.log('Hi, I\'m Toshiya Marukubo. Nice to meet you.')</script>
   </body>
 </html>
