--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -232,8 +232,10 @@
       </div><!-- end footer -->
     </div><!-- end body-container -->
     <script defer src="./scripts/three.min.js"></script>
+    <script defer src="./scripts/loading.js"></script>
     <script defer src="./scripts/fullscreen.js"></script>
     <script defer src="./scripts/cellautomaton.js"></script>
     <script defer src="./scripts/index.js"></script>
+    <script>console.log('Hi, I\'m Toshiya Marukubo. Nice to meet you.')</script>
   </body>
 </html>
