--- a/study-of-webgl/works/cube.html
+++ b/study-of-webgl/works/cube.html
@@ -87,7 +87,7 @@
             <ul>
               <li class="prev"><a href="#" class="disabled"><span aria-label="Previous Page"><</span></a></li>
               <li class="cur">#005</li>
-              <li class="next"><a href="./breathing.html"><span aria-label="Next Page">></span></a></li>
+              <li class="next"><a href="./liquid.html"><span aria-label="Next Page">></span></a></li>
             </ul>
           </div><!-- end nav -->
           <div class="back">
@@ -105,8 +105,10 @@
       </div><!-- end header -->
     </div><!-- end body-container -->
     <script defer src="../scripts/three.min.js"></script>
+    <script defer src="../scripts/loading.js"></script>
     <script defer src="../scripts/fullscreen.js"></script>
     <script defer src="../scripts/popup.js"></script>
     <script defer src="../scripts/cube.js"></script>
+    <script>console.log('Hi, I\'m Toshiya Marukubo. Nice to meet you.')</script>
   </body>
 </html>
