--- a/study-of-webgl/works/monument.html
+++ b/study-of-webgl/works/monument.html
@@ -95,9 +95,9 @@
           </div><!-- end what -->
           <div class="nav">
             <ul>
-              <li class="prev"><a href="./breathing.html"><span aria-label="Previous Page"><</span></a></li>
+              <li class="prev"><a href="./liquid.html"><span aria-label="Previous Page"><</span></a></li>
               <li class="cur">#003</li>
-              <li class="next"><a href="./rotation.html"><span aria-label="Next Page">></span></a></li>
+              <li class="next"><a href="./breathing.html"><span aria-label="Next Page">></span></a></li>
             </ul>
           </div><!-- end nav -->
           <div class="back">
@@ -115,8 +115,10 @@
       </div><!-- end header -->
     </div><!-- end body-container -->
     <script defer src="../scripts/three.min.js"></script>
+    <script defer src="../scripts/loading.js"></script>
     <script defer src="../scripts/fullscreen.js"></script>
     <script defer src="../scripts/popup.js"></script>
     <script defer src="../scripts/monument.js"></script>
+    <script>console.log('Hi, I\'m Toshiya Marukubo. Nice to meet you.')</script>
   </body>
 </html>
