--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -97,6 +97,38 @@
         <div class="main-container">
           <div class="works">
             <div class="image">
+              <a href="./works/noisy.html">
+                <img src="./images/noisy.png" loading="lazy" alt="noisy image" width="848" height="600">
+                <div class="overlay">
+                  <span class="view">View</span>
+                </div>
+              </a>
+            </div><!-- end image -->
+            <ol>
+              <li class="title">
+                <a href="./works/noisy.html">Noisy</a>
+              </li>
+              <li class="date">Created Sep 30, 2021</li>
+            </ol>
+          </div><!-- end works -->
+          <div class="works">
+            <div class="image">
+              <a href="./works/jumping.html">
+                <img src="./images/jumping.png" loading="lazy" alt="jumping image" width="848" height="600">
+                <div class="overlay">
+                  <span class="view">View</span>
+                </div>
+              </a>
+            </div><!-- end image -->
+            <ol>
+              <li class="title">
+                <a href="./works/jumping.html">Jumping</a>
+              </li>
+              <li class="date">Created Sep 17, 2021</li>
+            </ol>
+          </div><!-- end works -->
+          <div class="works">
+            <div class="image">
               <a href="./works/cube.html">
                 <img src="./images/cube.png" loading="lazy" alt="cube image" width="848" height="600">
                 <div class="overlay">
@@ -125,6 +157,38 @@
                 <a href="./works/liquid.html">Liquid</a>
               </li>
               <li class="date">Created Sep 17, 2021</li>
+            </ol>
+          </div><!-- end works -->
+          <div class="works">
+            <div class="image">
+              <a href="./works/cubes.html">
+                <img src="./images/cubes.png" loading="lazy" alt="cubes image" width="848" height="600">
+                <div class="overlay">
+                  <span class="view">View</span>
+                </div>
+              </a>
+            </div><!-- end image -->
+            <ol>
+              <li class="title">
+                <a href="./works/cubes.html">Cubes</a>
+              </li>
+              <li class="date">Created Sep 17, 2021</li>
+            </ol>
+          </div><!-- end works -->
+          <div class="works">
+            <div class="image">
+              <a href="./works/afraid.html">
+                <img src="./images/afraid.png" loading="lazy" alt="afraid image" width="848" height="600">
+                <div class="overlay">
+                  <span class="view">View</span>
+                </div>
+              </a>
+            </div><!-- end image -->
+            <ol>
+              <li class="title">
+                <a href="./works/afraid.html">Afraid</a>
+              </li>
+              <li class="date">Created Sep 07, 2021</li>
             </ol>
           </div><!-- end works -->
           <div class="works">
