--- a/study-of-webgl/works/afraid.html
+++ b/study-of-webgl/works/afraid.html
@@ -16,8 +16,8 @@
     <!-- Open Graph Protocol -->
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Toshiya Marukubo | Study of WebGL">
-    <meta property="og:url" content="https://toshiya-marukubo.github.io/study-of-webgl/works/cubes.html">
-    <meta property="og:title" content="Toshiya Marukubo | Study of WebGL | Cubes">
+    <meta property="og:url" content="https://toshiya-marukubo.github.io/study-of-webgl/works/afraid.html">
+    <meta property="og:title" content="Toshiya Marukubo | Study of WebGL | Afraid">
     <meta property="og:image" content="../images/og-home.png">
     <meta property="og:description" content="Study of WebGL">
     <!-- Twitter Card -->
@@ -31,7 +31,7 @@
     <link href="../styles/reset.min.css" rel="stylesheet">
     <link href="../styles/index.css" rel="stylesheet">
     <link href="../styles/works.css" rel="stylesheet">
-    <title>Toshiya Marukubo | Study of WebGL | Cubes</title>
+    <title>Toshiya Marukubo | Study of WebGL | Afraid</title>
   </head>
   <body>
     <div class="loading">
@@ -42,8 +42,8 @@
         <div class="header-container">
           <h1><a href="../index.html">TM</a></h1>
           <div class="works-description">
-            <h2>Cubes</h2>
-            <p>Sep 17, 2021</p>
+            <h2>Afraid</h2>
+            <p>Sep 07, 2021</p>
           </div><!-- works-description -->
           <div class="question">
             <a href="#" role="button">
@@ -67,8 +67,8 @@
             </ol>
             <h4>Code</h4>
             <ol>
-              <li><a href="https://codepen.io/toshiya-marukubo/pen/WNOdYYZ" target="_blank" rel="noopener">CodePen</a></li>
-              <li><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/tree/main/study-of-webgl/org-src/scripts/cubes.js">GitHub</a></li>
+              <li><a href="https://codepen.io/toshiya-marukubo/pen/RwgoqVm" target="_blank" rel="noopener">CodePen</a></li>
+              <li><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/tree/main/study-of-webgl/org-src/scripts/afraid.js">GitHub</a></li>
             </ol>
             <div class="close">
               <a href="#" role="button">
@@ -104,6 +104,6 @@
     <script defer src="../scripts/loading.js"></script>
     <script defer src="../scripts/fullscreen.js"></script>
     <script defer src="../scripts/popup.js"></script>
-    <script defer src="../scripts/cubes.js"></script>
+    <script defer src="../scripts/afraid.js"></script>
   </body>
 </html>
