--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -98,7 +98,7 @@
           <div class="works">
             <div class="image">
               <a href="./works/noisy.html">
-                <img src="./images/noisy.png" loading="lazy" alt="noisy image" width="848" height="600">
+                <img src="./images/noisy.png" loading="lazy" alt="noisy image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -113,24 +113,8 @@
           </div><!-- end works -->
           <div class="works">
             <div class="image">
-              <a href="./works/jumping.html">
-                <img src="./images/jumping.png" loading="lazy" alt="jumping image" width="848" height="600">
-                <div class="overlay">
-                  <span class="view">View</span>
-                </div>
-              </a>
-            </div><!-- end image -->
-            <ol>
-              <li class="title">
-                <a href="./works/jumping.html">Jumping</a>
-              </li>
-              <li class="date">Created Sep 17, 2021</li>
-            </ol>
-          </div><!-- end works -->
-          <div class="works">
-            <div class="image">
               <a href="./works/cube.html">
-                <img src="./images/cube.png" loading="lazy" alt="cube image" width="848" height="600">
+                <img src="./images/cube.png" loading="lazy" alt="cube image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -145,8 +129,40 @@
           </div><!-- end works -->
           <div class="works">
             <div class="image">
+              <a href="./works/jumping.html">
+                <img src="./images/jumping.png" loading="lazy" alt="jumping image" width="682" height="482">
+                <div class="overlay">
+                  <span class="view">View</span>
+                </div>
+              </a>
+            </div><!-- end image -->
+            <ol>
+              <li class="title">
+                <a href="./works/jumping.html">Jumping</a>
+              </li>
+              <li class="date">Created Sep 21, 2021</li>
+            </ol>
+          </div><!-- end works -->
+          <div class="works">
+            <div class="image">
+              <a href="./works/monument.html">
+                <img src="./images/monument.png" loading="lazy" alt="monument image" width="682" height="482">
+                <div class="overlay">
+                  <span class="view">View</span>
+                </div>
+              </a>
+            </div><!-- end image -->
+            <ol>
+              <li class="title">
+                <a href="./works/monument.html">Monument</a>
+              </li>
+              <li class="date">Created Sep 17, 2021</li>
+            </ol>
+          </div><!-- end works -->
+          <div class="works">
+            <div class="image">
               <a href="./works/liquid.html">
-                <img src="./images/liquid.png" loading="lazy" alt="liquid image" width="848" height="600">
+                <img src="./images/liquid.png" loading="lazy" alt="liquid image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -162,7 +178,7 @@
           <div class="works">
             <div class="image">
               <a href="./works/cubes.html">
-                <img src="./images/cubes.png" loading="lazy" alt="cubes image" width="848" height="600">
+                <img src="./images/cubes.png" loading="lazy" alt="cubes image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -178,7 +194,7 @@
           <div class="works">
             <div class="image">
               <a href="./works/afraid.html">
-                <img src="./images/afraid.png" loading="lazy" alt="afraid image" width="848" height="600">
+                <img src="./images/afraid.png" loading="lazy" alt="afraid image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -193,8 +209,8 @@
           </div><!-- end works -->
           <div class="works">
             <div class="image">
-              <a href="./works/monument.html">
-                <img src="./images/monument.png" loading="lazy" alt="cube image" width="848" height="600">
+              <a href="./works/lavos.html">
+                <img src="./images/lavos.png" loading="lazy" alt="lavos image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -202,15 +218,15 @@
             </div><!-- end image -->
             <ol>
               <li class="title">
-                <a href="./works/monument.html">Monument</a>
+                <a href="./works/lavos.html">Lavos</a>
               </li>
-              <li class="date">Created Sep 17, 2021</li>
+              <li class="date">Created Aug 31, 2021</li>
             </ol>
           </div><!-- end works -->
           <div class="works">
             <div class="image">
               <a href="./works/breathing.html">
-                <img src="./images/breathing.png" loading="lazy" alt="breathing image" width="848" height="600">
+                <img src="./images/breathing.png" loading="lazy" alt="breathing image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -225,8 +241,24 @@
           </div><!-- end works -->
           <div class="works">
             <div class="image">
+              <a href="./works/migration.html">
+                <img src="./images/migration.png" loading="lazy" alt="migration image" width="682" height="482">
+                <div class="overlay">
+                  <span class="view">View</span>
+                </div>
+              </a>
+            </div><!-- end image -->
+            <ol>
+              <li class="title">
+                <a href="./works/migration.html">Migration</a>
+              </li>
+              <li class="date">Created Aug 24, 2021</li>
+            </ol>
+          </div><!-- end works -->
+          <div class="works">
+            <div class="image">
               <a href="./works/blooming.html">
-                <img src="./images/blooming.png" loading="lazy" alt="blooming image" width="848" height="600">
+                <img src="./images/blooming.png" loading="lazy" alt="blooming image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -236,13 +268,13 @@
               <li class="title">
                 <a href="./works/blooming.html">Blooming</a>
               </li>
-              <li class="date">Created Aug 24, 2021</li>
+              <li class="date">Created Aug 23, 2021</li>
             </ol>
           </div><!-- end works -->
           <div class="works">
             <div class="image">
               <a href="./works/rotation.html">
-                <img src="./images/rotation.png" loading="lazy" alt="rotation image" width="848" height="600">
+                <img src="./images/rotation.png" loading="lazy" alt="rotation image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -252,13 +284,13 @@
               <li class="title">
                 <a href="./works/rotation.html">Rotation</a>
               </li>
-              <li class="date">Created Aug 18, 2021</li>
+              <li class="date">Created Aug 19, 2021</li>
             </ol>
           </div><!-- end works -->
           <div class="works">
             <div class="image">
               <a href="./works/castle.html">
-                <img src="./images/castle.png" loading="lazy" alt="castle image" width="848" height="600">
+                <img src="./images/castle.png" loading="lazy" alt="castle image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -274,7 +306,7 @@
           <div class="works">
             <div class="image">
               <a href="./works/137-5.html">
-                <img src="./images/137-5.png" loading="lazy" alt="137.5 image" width="848" height="600">
+                <img src="./images/137-5.png" loading="lazy" alt="137.5 image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
