--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -40,6 +40,9 @@
       <div class="header">
         <div class="header-container">
           <h1><a href="./index.html">TM</a></h1>
+          <div class="count">
+            <p>#14 Works</p>
+          </div>
           <div class="description">
             <h2>Study of WebGL</h2>
             <p>Created by Toshiya Marukubo.</p>
@@ -90,7 +93,7 @@
           </div><!-- end description -->
           <div class="frame-top-right"></div>
           <div class="frame-bottom-left"></div>
-          <div class="scroll-down">Scroll</div>
+          <div class="scroll-down"></div>
         </div><!-- end header-container -->
       </div><!-- end header -->
       <div class="main">
