--- a/study-of-webgl/works/breathing.html
+++ b/study-of-webgl/works/breathing.html
@@ -88,9 +88,9 @@
           </div><!-- end what -->
           <div class="nav">
             <ul>
-              <li class="prev"><a href="./cube.html"><span aria-label="Previous Page"><</span></a></li>
-              <li class="cur">#004</li>
-              <li class="next"><a href="./blooming.html"><span aria-label="Next Page">></span></a></li>
+              <li class="prev"><a href="./lavos.html"><span aria-label="Previous Page"><</span></a></li>
+              <li class="cur">#006</li>
+              <li class="next"><a href="./migration.html"><span aria-label="Next Page">></span></a></li>
             </ul>
           </div><!-- end nav -->
           <div class="back">
