--- a/study-of-webgl/works/cube.html
+++ b/study-of-webgl/works/cube.html
@@ -85,9 +85,9 @@
           </div><!-- end what -->
           <div class="nav">
             <ul>
-              <li class="prev"><a href="#" class="disabled"><span aria-label="Previous Page"><</span></a></li>
-              <li class="cur">#005</li>
-              <li class="next"><a href="./liquid.html"><span aria-label="Next Page">></span></a></li>
+              <li class="prev"><a href="./noisy.html"><span aria-label="Previous Page"><</span></a></li>
+              <li class="cur">#013</li>
+              <li class="next"><a href="./jumping.html"><span aria-label="Next Page">></span></a></li>
             </ul>
           </div><!-- end nav -->
           <div class="back">
