--- a/study-of-webgl/works/lavos.html
+++ b/study-of-webgl/works/lavos.html
@@ -81,9 +81,9 @@
           </div><!-- end what -->
           <div class="nav">
             <ul>
-              <li class="prev"><a href="./blooming.html"><span aria-label="Previous Page"><</span></a></li>
-              <li class="cur">#002</li>
-              <li class="next"><a href="./castle.html"><span aria-label="Next Page">></span></a></li>
+              <li class="prev"><a href="./afraid.html"><span aria-label="Previous Page"><</span></a></li>
+              <li class="cur">#007</li>
+              <li class="next"><a href="./breathing.html"><span aria-label="Next Page">></span></a></li>
             </ul>
           </div><!-- end nav -->
           <div class="back">
