--- a/study-of-webgl/works/blooming.html
+++ b/study-of-webgl/works/blooming.html
@@ -88,8 +88,8 @@
           </div><!-- end what -->
           <div class="nav">
             <ul>
-              <li class="prev"><a href="./breathing.html"><span aria-label="Previous Page"><</span></a></li>
-              <li class="cur">#003</li>
+              <li class="prev"><a href="./migration.html"><span aria-label="Previous Page"><</span></a></li>
+              <li class="cur">#004</li>
               <li class="next"><a href="./rotation.html"><span aria-label="Next Page">></span></a></li>
             </ul>
           </div><!-- end nav -->
