--- a/study-of-webgl/works/jumping.html
+++ b/study-of-webgl/works/jumping.html
@@ -81,9 +81,9 @@
           </div><!-- end what -->
           <div class="nav">
             <ul>
-              <li class="prev"><a href="./blooming.html"><span aria-label="Previous Page"><</span></a></li>
-              <li class="cur">#000</li>
-              <li class="next"><a href="./castle.html"><span aria-label="Next Page">></span></a></li>
+              <li class="prev"><a href="./cube.html"><span aria-label="Previous Page"><</span></a></li>
+              <li class="cur">#012</li>
+              <li class="next"><a href="./monument.html"><span aria-label="Next Page">></span></a></li>
             </ul>
           </div><!-- end nav -->
           <div class="back">
