--- a/study-of-webgl/works/monument.html
+++ b/study-of-webgl/works/monument.html
@@ -95,9 +95,9 @@
           </div><!-- end what -->
           <div class="nav">
             <ul>
-              <li class="prev"><a href="./liquid.html"><span aria-label="Previous Page"><</span></a></li>
-              <li class="cur">#003</li>
-              <li class="next"><a href="./breathing.html"><span aria-label="Next Page">></span></a></li>
+              <li class="prev"><a href="./jumping.html"><span aria-label="Previous Page"><</span></a></li>
+              <li class="cur">#011</li>
+              <li class="next"><a href="./liquid.html"><span aria-label="Next Page">></span></a></li>
             </ul>
           </div><!-- end nav -->
           <div class="back">
