--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -334,6 +334,7 @@
     <script defer src="./scripts/loading.js"></script>
     <script defer src="./scripts/fullscreen.js"></script>
     <script defer src="./scripts/cellautomaton.js"></script>
+    <script defer src="./scripts/scroll.js"></script>
     <script defer src="./scripts/index.js"></script>
   </body>
 </html>
