--- a/study-of-webgl/works/noisy.html
+++ b/study-of-webgl/works/noisy.html
@@ -56,10 +56,10 @@
           </div><!-- end question -->
           <div class="what" aria-live="assertive">
             <h3>What's this?</h3>
-            <p>Please check spheres size.</p>
+            <p>I wanted to use canvas2d as a texture.</p>
             <h4>References</h4>
             <ol>
-              <li>None.</li>
+              <li><a href="https://codepen.io/bokoko33/pen/vYmWjOB?editors=0010" target="_blank" rel="noopener">How to make color gap. - https://codepen.io/bokoko33/pen/vYmWjOB?editors=0010</a></li>
             </ol>
             <h4>Libraries</h4>
             <ol>
