--- a/study-of-webgl/works/cube.html
+++ b/study-of-webgl/works/cube.html
@@ -56,12 +56,12 @@
           </div><!-- end question -->
           <div class="what" aria-live="assertive">
             <h3>What's this?</h3>
-            <p>It's a cube and line animation.</p>
+            <p>I wanted to use line function.</p>
             <h4>References</h4>
             <ol>
               <li>
                 <a href="https://iquilezles.org/www/articles/palettes/palettes.htm" target="_blank" rel="noopener">
-                  Inigo Quilez | articles | palettes - 1999 - How to make color.
+                  How to make color. - Inigo Quilez | articles | palettes - 1999
                 </a>
               </li>
             </ol>
