--- a/study-of-webgl/works/cube.html
+++ b/study-of-webgl/works/cube.html
@@ -56,7 +56,7 @@
           </div><!-- end question -->
           <div class="what" aria-live="assertive">
             <h3>What's this?</h3>
-            <p>I wanted to use line function.</p>
+            <p>I used line function. I like this color pattern.</p>
             <h4>References</h4>
             <ol>
               <li>
