--- a/study-of-webgl/works/monument.html
+++ b/study-of-webgl/works/monument.html
@@ -56,7 +56,7 @@
           </div><!-- end question -->
           <div class="what" aria-live="assertive">
             <h3>What's this?</h3>
-            <p>I used a cellular automaton to texture.</p>
+            <p>I used a cellular automaton to texture. This cellular automaton pattern is so cool!</p>
             <h4>References</h4>
             <ol>
               <li>
