--- a/study-of-webgl/works/jumping.html
+++ b/study-of-webgl/works/jumping.html
@@ -16,7 +16,7 @@
     <!-- Open Graph Protocol -->
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Toshiya Marukubo | Study of WebGL">
-    <meta property="og:url" content="https://toshiya-marukubo.github.io/study-of-webgl/works/rotation.html">
+    <meta property="og:url" content="https://toshiya-marukubo.github.io/study-of-webgl/works/jumping.html">
     <meta property="og:title" content="Toshiya Marukubo | Study of WebGL | Jumping">
     <meta property="og:image" content="../images/og-home.png">
     <meta property="og:description" content="Study of WebGL">
@@ -56,7 +56,7 @@
           </div><!-- end question -->
           <div class="what" aria-live="assertive">
             <h3>What's this?</h3>
-            <p>I used cylinder geometry for the first time.</p>
+            <p>I used cylinder geometry for the first time. This gross is so good.</p>
             <h4>References</h4>
             <ol>
               <li>None.</li>
