--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -101,7 +101,7 @@
           <div class="works">
             <div class="image">
               <a href="./works/noisy.html">
-                <img src="./images/noisy.png" loading="lazy" alt="noisy image" width="682" height="482">
+                <img class="progress" src="./images/noisy-dammy.png" data-src="./images/noisy.png" alt="noisy image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -117,7 +117,7 @@
           <div class="works">
             <div class="image">
               <a href="./works/cube.html">
-                <img src="./images/cube.png" loading="lazy" alt="cube image" width="682" height="482">
+                <img class="progress" src="./images/cube-dammy.png" data-src="./images/cube.png" alt="cube image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -133,7 +133,7 @@
           <div class="works">
             <div class="image">
               <a href="./works/jumping.html">
-                <img src="./images/jumping.png" loading="lazy" alt="jumping image" width="682" height="482">
+                <img class="progress" src="./images/jumping-dammy.png" data-src="./images/jumping.png" alt="jumping image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -149,7 +149,7 @@
           <div class="works">
             <div class="image">
               <a href="./works/monument.html">
-                <img src="./images/monument.png" loading="lazy" alt="monument image" width="682" height="482">
+                <img class="progress" src="./images/monument-dammy.png" data-src="./images/monument.png" alt="monument image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -165,7 +165,7 @@
           <div class="works">
             <div class="image">
               <a href="./works/liquid.html">
-                <img src="./images/liquid.png" loading="lazy" alt="liquid image" width="682" height="482">
+                <img class="progress" src="./images/liquid-dammy.png" data-src="./images/liquid.png" alt="liquid image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -181,7 +181,7 @@
           <div class="works">
             <div class="image">
               <a href="./works/cubes.html">
-                <img src="./images/cubes.png" loading="lazy" alt="cubes image" width="682" height="482">
+                <img class="progress" src="./images/cubes-dammy.png" data-src="./images/cubes.png" alt="cubes image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -334,6 +334,7 @@
     <script defer src="./scripts/fullscreen.js"></script>
     <script defer src="./scripts/loading.js"></script>
     <script defer src="./scripts/cellautomaton.js"></script>
+    <script defer src="./scripts/scroll.js"></script>
     <script defer src="./scripts/index.js"></script>
   </body>
 </html>
