--- a/study-of-webgl/works/monument.html
+++ b/study-of-webgl/works/monument.html
@@ -114,6 +114,7 @@
         </div><!-- end header-container -->
       </div><!-- end header -->
     </div><!-- end body-container -->
+    <script defer src="../scripts/alert.js"></script>
     <script defer src="../scripts/three.min.js"></script>
     <script defer src="../scripts/loading.js"></script>
     <script defer src="../scripts/fullscreen.js"></script>
