--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -197,7 +197,7 @@
           <div class="works">
             <div class="image">
               <a href="./works/afraid.html">
-                <img src="./images/afraid.png" loading="lazy" alt="afraid image" width="682" height="482">
+                <img class="progress" src="./images/afraid-dammy.png" data-src="./images/afraid.png" alt="afraid image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -330,6 +330,7 @@
         </div><!-- end footer-container -->
       </div><!-- end footer -->
     </div><!-- end body-container -->
+    <script defer src="./scripts/intersection-observer.js"></script>
     <script defer src="./scripts/three.min.js"></script>
     <script defer src="./scripts/fullscreen.js"></script>
     <script defer src="./scripts/loading.js"></script>
