--- a/study-of-webgl/works/afraid.html
+++ b/study-of-webgl/works/afraid.html
@@ -56,10 +56,14 @@
           </div><!-- end question -->
           <div class="what" aria-live="assertive">
             <h3>What's this?</h3>
-            <p>Please check spheres size.</p>
+            <p>This is used GPGPU. I expressed rainy days ocean at night. There is a shark threre.</p>
             <h4>References</h4>
             <ol>
-              <li>None.</li>
+              <li>
+                <a href="https://www.bookdepository.com/Generative-Art-Matt-Pearson/9781935182627?redirected=true&utm_medium=Google&utm_campaign=Base1&utm_source=JP&utm_content=Generative-Art&selectCurrency=JPY&w=AFFBAU960RZD7TA8V388&pdg=pla-317692435101:kwd-317692435101:cmp-8752714707:adg-87125587846:crv-410025753095:pid-9781935182627:dev-c&gclid=CjwKCAiAlfqOBhAeEiwAYi43F2K5KdEXpq6ps1GVc8vMQMOOysXpAlN4dLvWQSSl93lq_RoPFjksrhoCbvsQAvD_BwE" target="_blank" rel="noopener">
+                  Generative Art: A Practical Guide Using Processing / Matt Pearson - How to make cellular automaton.
+                </a>
+              </li>
             </ol>
             <h4>Libraries</h4>
             <ol>
@@ -104,6 +108,7 @@
     <script defer src="../scripts/loading.js"></script>
     <script defer src="../scripts/fullscreen.js"></script>
     <script defer src="../scripts/popup.js"></script>
+    <script defer src="../scripts/GPUComputationRenderer.js"></script>
     <script defer src="../scripts/afraid.js"></script>
   </body>
 </html>
