--- a/study-of-webgl/works/lavos.html
+++ b/study-of-webgl/works/lavos.html
@@ -16,7 +16,7 @@
     <!-- Open Graph Protocol -->
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Toshiya Marukubo | Study of WebGL">
-    <meta property="og:url" content="https://toshiya-marukubo.github.io/study-of-webgl/works/cubes.html">
+    <meta property="og:url" content="https://toshiya-marukubo.github.io/study-of-webgl/works/lavos.html">
     <meta property="og:title" content="Toshiya Marukubo | Study of WebGL | Lavos">
     <meta property="og:image" content="../images/og-home.png">
     <meta property="og:description" content="Study of WebGL">
@@ -67,8 +67,8 @@
             </ol>
             <h4>Code</h4>
             <ol>
-              <li><a href="https://codepen.io/toshiya-marukubo/pen/WNOdYYZ" target="_blank" rel="noopener">CodePen</a></li>
-              <li><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/tree/main/study-of-webgl/org-src/scripts/cubes.js">GitHub</a></li>
+              <li><a href="https://codepen.io/toshiya-marukubo/pen/mdwVGvg" target="_blank" rel="noopener">CodePen</a></li>
+              <li><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/tree/main/study-of-webgl/org-src/scripts/lavos.js">GitHub</a></li>
             </ol>
             <div class="close">
               <a href="#" role="button">
@@ -104,6 +104,7 @@
     <script defer src="../scripts/loading.js"></script>
     <script defer src="../scripts/fullscreen.js"></script>
     <script defer src="../scripts/popup.js"></script>
+    <script defer src="../scripts/GPUComputationRenderer.js"></script>
     <script defer src="../scripts/lavos.js"></script>
   </body>
 </html>
