--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -213,7 +213,7 @@
           <div class="works">
             <div class="image">
               <a href="./works/lavos.html">
-                <img src="./images/lavos.png" loading="lazy" alt="lavos image" width="682" height="482">
+                <img class="progress" src="./images/lavos-dammy.png" data-src="./images/lavos.png" alt="lavos image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
