--- a/study-of-webgl/works/lavos.html
+++ b/study-of-webgl/works/lavos.html
@@ -56,10 +56,14 @@
           </div><!-- end question -->
           <div class="what" aria-live="assertive">
             <h3>What's this?</h3>
-            <p>Please check spheres size.</p>
+            <p>Hello, I'm here to destroy the Earth!</p>
             <h4>References</h4>
             <ol>
-              <li>None.</li>
+              <li>
+                <a href="https://gist.github.com/patriciogonzalezvivo/670c22f3966e662d2f83" target="_blank" rel="noopener">
+                  Git Hub | patriciogonzalezvivo | GLSL-Noise.md - Simplex Noise
+                </a>
+              </li>
             </ol>
             <h4>Libraries</h4>
             <ol>
