--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -229,7 +229,7 @@
           <div class="works">
             <div class="image">
               <a href="./works/breathing.html">
-                <img src="./images/breathing.png" loading="lazy" alt="breathing image" width="682" height="482">
+                <img class="progress" src="./images/breathing-dammy.png" data-src="./images/breathing.png" alt="breathing image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
