--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -40,8 +40,8 @@
       <div class="header">
         <div class="header-container">
           <h1><a href="./index.html">TM</a></h1>
-          <div class="count">
-            <p>#14 Works</p>
+          <div class="hi">
+            <p>Hi :)</p>
           </div>
           <div class="description">
             <h2>Study of WebGL</h2>
@@ -245,7 +245,7 @@
           <div class="works">
             <div class="image">
               <a href="./works/migration.html">
-                <img src="./images/migration.png" loading="lazy" alt="migration image" width="682" height="482">
+                <img class="progress" src="./images/migration-dammy.png" data-src="./images/migration.png" alt="migration image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
