--- a/study-of-webgl/works/migration.html
+++ b/study-of-webgl/works/migration.html
@@ -56,10 +56,24 @@
           </div><!-- end question -->
           <div class="what" aria-live="assertive">
             <h3>What's this?</h3>
-            <p>Please check spheres size.</p>
+            <p>I add a simplex noise to vector and color.</p>
             <h4>References</h4>
             <ol>
-              <li>None.</li>
+              <li>
+                <a href="https://gist.github.com/patriciogonzalezvivo/670c22f3966e662d2f83" target="_blank" rel="noopener">
+                  Git Hub | patriciogonzalezvivo | GLSL-Noise.md - Simplex Noise
+                </a>
+              </li>
+              <li>
+                <a href="https://qiita.com/uma6661/items/20accc9b5fb9845fc73a" target="_blank" rel="noopener">
+                  Qiita | Three.jsのGPGPUのサンプルが難しすぎるから解体して勉強してみる - How to use GPUComputationRenderer.
+                </a>
+              </li>
+              <li>
+                <a href="https://wgld.org/d/webgl/w083.html" target="_blank" rel="noopener">
+                  wgld.org | GPGPU でパーティクルを大量に描く - About GPGPU.
+                </a>
+              </li>
             </ol>
             <h4>Libraries</h4>
             <ol>
@@ -104,6 +118,7 @@
     <script defer src="../scripts/loading.js"></script>
     <script defer src="../scripts/fullscreen.js"></script>
     <script defer src="../scripts/popup.js"></script>
+    <script defer src="../scripts/GPUComputationRenderer.js"></script>
     <script defer src="../scripts/migration.js"></script>
   </body>
 </html>
